--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,18 @@
     "contextMenus"
   ],
   "host_permissions": [
-    "*://*.youtube.com/*"
+    "*://*.youtube.com/*",
+    "*://*.looptube.io/*"
   ],
   "background": {
     "service_worker": "background.js"
   },
   "content_scripts": [
     {
-      "matches": ["*://*.youtube.com/*"],
+      "matches": [
+        "*://*.youtube.com/*",
+        "*://*.looptube.io/*"
+      ],
       "js": ["content.js"]
     }
   ]
